暂时兜底了RayTrace的部分bug，bug原因是Light没有提供光照强度计算接口，直接用的emission，之前一片黑是因为mesh的diffuse没有设置，open的管线中提供了默认值，然而pathtracing完全是另一套管线；以及trace的width和height写反了，所以连灯也看不见

--- a/configs/renderConfig.json
+++ b/configs/renderConfig.json
@@ -1,27 +1,1 @@
-{
-  "CameraAspect": 1,
-  "CameraFOV": 45,
-  "CameraFar": 120,
-  "CameraNear": 0.10000000149011612,
-  "CameraPitch": 0,
-  "CameraSpeed": 2.5,
-  "CameraYaw": -90,
-  "CameraZoom": 45,
-  "CaptureRadius_ShadowMap": 10,
-  "Exposure": 1,
-  "MouseSensitivity": 0.10000000149011612,
-  "RenderPipeline": 1,
-  "ShadingModelForDeferredRendering": 0,
-  "Resolution_ShadowMap": 1024,
-  "SPP": 128,
-  "SceneType": 0,
-  "WindowHeight": 784,
-  "WindowWidth": 784,
-  "bShadowMap": false,
-  "bSkybox": false,
-  "bUseBVH": false,
-  "bUseBloom": false,
-  "bUseHDR": true,
-  "bUseSSAO": false,
-  "bUseMipmaps": false
-}
+{"CameraAspect": 1, "CameraFOV": 45, "CameraFar": 120, "CameraNear": 0.10000000149011612, "CameraPitch": 0, "CameraSpeed": 2.5, "CameraYaw": -90, "CameraZoom": 45, "CaptureRadius_ShadowMap": 10, "Exposure": 1, "MouseSensitivity": 0.10000000149011612, "RenderPipeline": 1, "Resolution_ShadowMap": 1024, "SPP": 16, "SceneType": 1, "ShadingModelForDeferredRendering": 2, "WindowHeight": 784, "WindowWidth": 784, "bShadowMap": true, "bSkybox": false, "bUseBVH": true, "bUseBloom": false, "bUseHDR": true, "bUseMipmaps": false, "bUseSSAO": false, "bDrawDebugBVH": false }
